# Total3DAutoAim_md

./: README.md  aim_cmd.py  armor_predicted.py  block.py  export.py  loss.py  predicted.py  requirements.txt  train.py  vane_predicted.py  vane_train.py
c++_AutoAim_example/example_AutoAim/: CMakeLists.txt  test.cpp
c++_AutoAim_example/example_AutoAim/infer_openvino/: CMakeLists.txt
c++_AutoAim_example/example_AutoAim/infer_openvino/include/: infer_openvino.hpp
c++_AutoAim_example/example_AutoAim/infer_openvino/src/: infer_openvino.cpp
c++_AutoAim_example/example_AutoAim/ir_pred_model/: pred_model.xml
model/datasets/: processed_log.txt
utils/: cost_time.py  generate_dataset.py  generate_dataset_vane.py  hebing.py  lianghua.py  modeqianyi.py  preprocess_cost_time.py  preprocessing.py  vision.py
